...
    <string name="Transportation">Transportation</string>
    <string name="Work">Work</string>


    <string name="testing_string">it just for testing</string>

    <string name="category_name">Category name</string>

    <string name="UNKNOWN_CATEGORY">Unknown category</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
...
    <string name="english">English</string>
    <string name="changelanugaealart">Change app language cause app to restart</string>
    <string name="no_transaction_found_with_this_category">There is no transaction with this category!</string>

    <string name="no_chart_data_available">No chart data available.</string>

    <string name="income_chart_title">Income chart</string>
    <string name="expenses_chart_title">Expenses chart</string>
    <string name="swap_chart">SWAP CHART</string>
    <string name="delete">Delete</string>
    <string name="unable_to_recognize_this_transaction">Unable to recognize this transaction to delete it</string>
    <string name="are_you_sure_delete_transaction">"Are you sure you want to delete this transaction?"</string>

    <string name="month">""</string>
    <string name="confirm">Confirm</string>
...
    <string name="close_category_list">Close category list</string>
    <string name="invalid_number_error">Invalid number</string>
    <!--    content descriptions-->
    <string name="empty">""</string>

    <string name="navigate_back_cd">Navigate back</string>
    <string name="navigation_drawer_cd">Navigation drawer</string>
    <!--    Error messages-->
    <string name="error_reason">"\n\nReason: "</string>
    <string name="unknown_error">Unknown error #02</string>
    <string name="error_reason_data_is_null">\n\nReason: The data is NULL.</string>
    <string name="error_reason_unknown_database_error">\n\nReason: Unknown database error!"</string>
    <string name="unable_to_get_categories_to_update_them">Unable to get categories to update them</string>
...
