<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/mtrl_toolbar_default_height"
    android:background="?attr/colorPrimary">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar_month"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_round_arrow_back_24"
            app:navigationContentDescription="@string/navigate_back_cd">
            <include
                android:id="@+id/toolbar_month_changer"
                layout="@layout/toolbar_month_changer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end" />
        </com.google.android.material.appbar.MaterialToolbar>

    </FrameLayout>
</com.google.android.material.appbar.AppBarLayout>