...
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="4dp">

        <EditText
            android:id="@+id/edt_money"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="10"
            android:inputType="number" />

        <TextView
...
            android:gravity="center|start"
            android:inputType="number"
            android:text="@string/select_category"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_memo"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="10"
            android:hint="@string/write_note"
            android:inputType="text" />

...
